# server

./: .contest.json  .contest.json5  .gitignore  .run-that-app  .testconfig.json  .tool-versions  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE.md  contest.json  cucumber-sort.json  dprint.json  package-lock.json  package.json  run-that-app  rust-toolchain.toml  rustfmt.toml  schema.json
.github/workflows/: main.yml  release.yml  rust.yml
documentation/: configure.md  develop.md  install.md  run.md  schema.json
features/: config_with_commands.feature  debug.feature  help.feature  no_config.feature  repeat_last_command.feature  setup.feature  startup.feature  test_all.feature  test_file.feature  test_function.feature  var_from_file_content.feature  var_from_filename.feature  version.feature
features/commands/: debug.feature  help.feature  repeat_last_command.feature  setup.feature  startup.feature  test_all.feature  test_file.feature  test_function.feature  version.feature
features/configuration/: comments.feature  no_config.feature  print_result.feature
features/custom_vars/: current_or_above_line_content.feature  file.feature
features/edge_cases/: extra_fields.feature  using_unavailable_data.feature  using_unavailable_filename.feature  using_unavailable_line.feature
features/test_types/: custom_command.feature  quit.feature  repeat_last_command.feature  test_all.feature  test_file.feature  test_file_line.feature  test_function.feature
src/: args.rs  channel.rs  config.rs  errors.rs  fifo.rs  lib.rs  main.rs  run.rs  subshell.rs  trigger.rs
src/cli/: args.rs  command.rs  ctrl_c.rs  exit.rs  mod.rs  print_error.rs
src/client/: fifo.rs  fifo_data.rs  mod.rs  trigger.rs
src/config/: data.rs  file.rs  mod.rs  pattern.rs
src/config/data/: action.rs  after_run.rs  before_run.rs  configuration.rs  mod.rs  options.rs  pattern.rs  trigger.rs  var.rs  var_source.rs
src/config/file/: create.rs  data.rs  mod.rs  read.rs
src/config/file/data/: action.rs  before_run.rs  configuration.rs  content.rs  file_action.rs  file_after_run.rs  file_before_run.rs  file_configuration.rs  file_options.rs  file_var.rs  mod.rs  options.rs  var.rs
src/scanner/: file_upwards.rs  mod.rs  scan_file.rs  scan_string.rs  string_upwards.rs
src/subshell/: mod.rs
src/template/: mod.rs  regex.rs  replace.rs  replace_all.rs
tests/: cucumber.rs  json-schema.rs  json_schema.rs
tests/cucumber/: logic.rs  main.rs  world.rs
text-run/: tertestrial-command.ts
text-runner/: contest-command.ts  json-schema.ts  subcommand.ts  tertestrial-command.ts  verify-json.ts
tools/: package-lock.json  package.json  rta
