[package]
name = "tertestrial"
description = "auto-run tests from within your code editor"
version = "0.0.2"
authors = ["Kevin Goslar <kevin.goslar@gmail.com>"]
edition = "2021"

[dependencies]
ctrlc = { version = "3.4", features = ["termination"] }
glob = "0.3.1"
nix = "0.19.1"
prettytable-rs = "^0.8"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
shellwords = "1.1.0"
termcolor = "1.4"
terminal_size = "0.1"
clap = "2.34.0"

[dev-dependencies]
cucumber = "0.21.0"
futures = "0.3.30"
tempfile = "3"
tokio = { version = "1.37.0", features = ["fs", "io-util", "macros", "process", "rt"] }

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
test = false

[profile.dev]
panic = "unwind"

[profile.release]
opt-level = 's'    # Optimize for size
lto = true         # enable link-time optimization (removes dead code)
codegen-units = 1  # reduce codegen units to enable additional optimizations
panic = "unwind"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
use_self = "deny"

[lints.clippy]
derive_partial_eq_without_eq = "deny"
impl_trait_in_params = "deny"
module_name_repetitions = "deny"
redundant_pub_crate = "deny"
str_to_string = "deny"
string_to_string = "deny"
