[package]
name = "contest"
description = "server component for the continuous testing framework"
version = "0.2.0"
authors = ["Kevin Goslar <kevin.goslar@gmail.com>"]
edition = "2024"

[dependencies]
ahash = "0.8.11"
clap = { version = "4.5.9", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
glob = "0.3.1"
json5 = "0.4.1"
nix = "0.19.1"
prettytable-rs = "0.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
shellwords = "1.1.0"
termcolor = "1.4"
terminal_size = "0.1"

[dev-dependencies]
big_s = "1.0.2"
cucumber = "0.21.1"
futures = "0.3.30"
pretty = { package = "pretty_assertions", version = "1.4.0" }
tempfile = "3"
tokio = { version = "1.38.0", features = ["fs", "io-util", "macros", "process", "rt"] }

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
test = false  # does not run this test when running "cargo test", run it explicitly via "cargo test --test cucumber"

[profile.dev]
panic = "unwind"

[profile.release]
opt-level = 's'    # Optimize for size
lto = true         # enable link-time optimization (removes dead code)
codegen-units = 1  # reduce codegen units to enable additional optimizations
panic = "unwind"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
use_self = "deny"

[lints.clippy]
pedantic = { priority = -1, level = "deny" }
derive_partial_eq_without_eq = "deny"
impl_trait_in_params = "deny"
module_name_repetitions = "deny"
redundant_pub_crate = "deny"
str_to_string = "deny"
string_to_string = "deny"
missing_errors_doc = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
