[package]
name = "contest"
description = "server component for the continuous testing framework"
version = "0.4.0"
authors = ["Kevin Goslar <kevin.goslar@gmail.com>"]
edition = "2024"

[dependencies]
ahash = "0.8.12"
big_s = "1.0.2"
clap = { version = "4.5.48", features = ["derive"] }
ctrlc = { version = "3.5", features = ["termination"] }
glob = "0.3.3"
json5 = "0.4.1"
nix = {version =  "0.29.0", features = ["fs"]}
prettytable-rs = "0.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
shellwords = "1.1.0"
termcolor = "1.4"
terminal_size = "0.4"
schemars = "0.8.22"

[dev-dependencies]
cucumber = "0.21.1"
futures = "0.3.31"
pretty = { package = "pretty_assertions", version = "1.4.1" }
serde_json = "1.0.145"
tempfile = "3"
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "process", "rt"] }

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
test = false  # does not run this test when running "cargo test", run it explicitly via "cargo test --test cucumber"

[profile.dev]
panic = "unwind"

[profile.release]
opt-level = 's'    # Optimize for size
lto = true         # enable link-time optimization (removes dead code)
codegen-units = 1  # reduce codegen units to enable additional optimizations
panic = "unwind"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
use_self = "deny"

[lints.clippy]
pedantic = { priority = -1, level = "deny" }
derive_partial_eq_without_eq = "deny"
impl_trait_in_params = "deny"
module_name_repetitions = "allow"
redundant_pub_crate = "deny"
str_to_string = "deny"
string_to_string = "deny"
missing_errors_doc = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
